--- a/public/styles.css
+++ b/public/styles.css
@@ -135,6 +135,23 @@ body.dark-mode {
     color: var(--primary);
     z-index: 1;
 }
+.social-links {
+    display: flex;
+    justify-content: flex-start;
+    gap: 1.5rem;
+    margin-bottom: 1rem;
+}
+
+.social-links a {
+    color: var(--primary);
+    font-size: 1.5rem;
+    transition: transform 0.3s;
+}
+
+.social-links a:hover {
+    transform: translateY(-3px) scale(1.1);
+    color: var(--secondary);
+}
 
 #searchInput {
     width: 100%;
@@ -433,6 +450,9 @@ body.dark-mode .api-endpoint {
     .api-method {
         min-width: 50px;
         font-size: 0.65rem;
+    }
+        .social-links {
+        justify-content: center;
     }
     
     .api-title {
